<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bornearth.utils.ProfileForm"
    android:background="@drawable/bck">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/saisi_nom"
            android:id="@+id/nom"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/saisi_pr_nom"
            android:id="@+id/prenom"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/saisi_date_de_naissance_button"
                android:text="@string/saisi_date_de_naissance"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/saisi_heure_de_naissance_button"
                android:text="@string/saisi_heure_de_naissance"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:id="@+id/saisi_date_naissance"
                android:gravity="center"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:id="@+id/saisi_heure_naissance"
                android:gravity="center"
                android:textSize="18sp"/>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#fff"
            android:background="@drawable/back_button"
            android:text="@string/saisi_enregistrer_vos_informations"
            android:id="@+id/saisi_enregistrer_vos_informations_button"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
    </LinearLayout>

</RelativeLayout>